--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -25,9 +25,8 @@ jobs:
     - name: Build app for release
       run: msbuild AdventureWorks/AdventureWorks.sqlproj -t:rebuild -verbosity:diag -property:Configuration=Release
 
-
     - name: Zip Artifacts
-      run: Compress-Archive -Path publish/* -DestinationPath publish.zip
+      run: Compress-Archive -Path **\bin\$(BuildConfiguration)\** -DestinationPath publish.zip
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
