--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Deploy to DEV
         run: |
-          "C:\Program Files\Microsoft SQL Server\160\DAC\bin\sqlpackage.exe" /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_DEV_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
+          'C:\Program Files\Microsoft SQL Server\160\DAC\bin\sqlpackage.exe' /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_DEV_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
 
   deploy-qa:
     needs: deploy-dev
