--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Deploy to DEV
         run: |
-          sqlpackage.exe /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_DEV_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
+          sqlpackage /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_DEV_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
 
   deploy-qa:
     needs: deploy-dev
@@ -54,5 +54,5 @@ jobs:
 
       - name: Deploy to QA
         run: |
-          sqlpackage.exe /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_QA_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
+          sqlpackage /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_QA_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
           
