--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Deploy to DEV
         run: |
-          sqlpackage /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Your_DEV_Database_Connection_String" /p:BlockOnPossibleDataLoss=false
+          sqlpackage /Action:Publish /SourceFile:"AdventureWorks/bin/Release/YourDacpacFile.dacpac" /TargetConnectionString:"Server=${{ secrets.HOSTNAME }};Database=${{ secrets.DATABASE }};User Id=${{ secrets.USERNAME }};Password=${{ secrets.PASSWORD }};" /p:BlockOnPossibleDataLoss=false
 
   deploy-qa:
     needs: deploy-dev
